[metadata]
name = oauth_ssh
version = 0.14
description = SSH with OAuth Tokens
url = https://github.com/xsede/oauth-ssh
author = Jason Alt
author_email = jasonalt@globus.org
keywords = oauth, ssh
license = Apache License v2.0
classifiers =
    Intended Audience :: End Users/Desktop
    Operating System :: POSIX
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = oauth_ssh
install_requires =
    # >= 2.4.0 doesn't accept the json keyword in put requests
    requests >= 2.5.0,<3
    click >= 7.0,<8
    # paramiko >= 2.4 creates CryptographyDeprecationWarning
    paramiko >= 2.5.0,<3
python_requires = >=3.6

[options.entry_points]
console_scripts =
    oauth-ssh = oauth_ssh.oauth_ssh:oauth_ssh
    oauth-ssh-token = oauth_ssh.oauth_ssh_token:oauth_ssh_token
